Styling and static banner

--- a/app.json
+++ b/app.json
@@ -4,12 +4,12 @@
         "slug": "nisteia",
         "version": "1.0.0",
         "orientation": "portrait",
-        "icon": "./assets/icon.png",
+        "icon": "./assets/images/icon.png",
         "userInterfaceStyle": "automatic",
         "newArchEnabled": true,
         "scheme": "nisteia",
         "splash": {
-            "image": "./assets/splash-icon.png",
+            "image": "./assets/images/splash-icon.png",
             "resizeMode": "contain",
             "backgroundColor": "#ffffff"
         },
@@ -20,12 +20,12 @@
         },
         "android": {
             "adaptiveIcon": {
-                "foregroundImage": "./assets/adaptive-icon.png",
+                "foregroundImage": "./assets/images/adaptive-icon.png",
                 "backgroundColor": "#ffffff"
             },
             "userInterfaceStyle": "automatic"
         },
-        "plugins": ["expo-router"],
+        "plugins": ["expo-router", "expo-font"],
         "extra": {
             "router": {
                 "origin": false
