--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~52.0.37",
     "expo-constants": "~17.0.7",
     "expo-dev-client": "~5.0.12",
+    "expo-font": "~13.0.4",
     "expo-router": "^4.0.17",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -23,8 +24,7 @@
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.1",
-    "expo-font": "~13.0.4"
+    "react-native-screens": "^4.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
