--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.37",
     "expo-constants": "~17.0.7",
     "expo-dev-client": "~5.0.12",
@@ -20,11 +20,12 @@
     "expo-status-bar": "~2.0.1",
     "expo-system-ui": "~4.0.8",
     "react": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.24.0",
-    "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.1"
+    "react-native": "^0.76.7",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-midnight": "^1.0.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
